kubernetes/apps/networking/traefik/add-ons/external-services/plex2.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex
  namespace: networking
  annotations:
    coredns.io/hostname: "plex.${SECRET_DOMAIN}"
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: networking-chain-authentik-plex@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: &host "plex.${SECRET_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: plex
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - *host
      secretName: *host
---
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: networking
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 32400
---
apiVersion: v1
kind: Endpoints
metadata:
  name: plex
  namespace: networking
subsets:
  - addresses:
      - ip: ${PLEX_ADDR}
    ports:
      - port: 32400
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: middlewares-plex-addprefix
  namespace: networking
spec:
  addPrefix:
    prefix: "/web"
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: chain-authentik-plex
  namespace: networking
spec:
  chain:
    middlewares:
      - name: middlewares-rate-limit
      - name: middlewares-plex-addprefix
      - name: middlewares-secure-headers
      - name: traefik-middlewares-authentik
