kubernetes/apps/networking/traefik/add-ons/external-services/proxmox.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxmox
  namespace: networking
  annotations:
    coredns.io/hostname: "proxmox.${SECRET_DOMAIN}"
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middleware-chains-authentik@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: &host "proxmox.${SECRET_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: proxmox
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - *host
      secretName: "proxmox-${SECRET_DOMAIN/./-}-tls"
---
apiVersion: v1
kind: Service
metadata:
  name: proxmox
spec:
  ports:
    - name: https
      protocol: TCP
      port: 8006
      targetPort: https
---
apiVersion: v1
kind: Endpoints
metadata:
  name: proxmox
subsets:
  - addresses:
      - ip: ${PROXMOX_ADDR}
    ports:
      - name: https
        port: 8006
        protocol: TCP
