kubernetes/apps/networking/traefik/add-ons/external-services/proxmox2.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxmox
  namespace: networking
  annotations:
    coredns.io/hostname: "proxmox.${SECRET_DOMAIN}"
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middleware-chains-authentik@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: &host "proxmox.${SECRET_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: proxmox
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - *host
      secretName: *host
---
apiVersion: v1
kind: Service
metadata:
  name: proxmox
  namespace: networking
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8006
---
apiVersion: v1
kind: Endpoints
metadata:
  name: proxmox
  namespace: networking
subsets:
  - addresses:
      - ip: ${PROXMOX_ADDR}}
    ports:
      - port: 8006
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: chain-authentik-proxmox
  namespace: networking
spec:
  chain:
    middlewares:
      - name: traefik-middleware-redirect-https
      - name: traefik-middleware-secure-headers
      - name: traefik-middleware-rate-limit
      - name: traefik-middleware-authentik
